[package]
name = "muxclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
dirs = "5.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tempfile = "3.10" # Useful for tests
